--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -219,49 +219,49 @@
     padding-top: 40px;
   }
 }
-.contenedor-tarjetas {
+.contenedor-tarjetamaestra {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
 @media (min-width: 550px) {
-  .contenedor-tarjetas-receta {
+  .contenedor-tarjetamaestra-receta {
     display: flex;
     justify-content: space-between;
   }
 }
 @media (min-width: 550px) {
-  .contenedor-tarjetas-producto {
+  .contenedor-tarjetamaestra-producto {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
   }
 }
-.contenedor-tarjetas-tarjeta {
+.contenedor-tarjetamaestra-tarjeta {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
 @media (min-width: 550px) {
-  .contenedor-tarjetas-tarjeta-producto {
+  .contenedor-tarjetamaestra-tarjeta-producto {
     padding: 16px;
     height: auto;
     max-width: 100%;
-    border-bottom: none;
+    border-bottom: none !important;
   }
 }
 @media (min-width: 550px) {
-  .contenedor-tarjetas-tarjeta-producto-imagen img {
+  .contenedor-tarjetamaestra-tarjeta-producto-imagen img {
     width: 100%;
     height: 200px;
   }
 }
-.contenedor-tarjetas-tarjeta-producto .botonchip-compra {
+.contenedor-tarjetamaestra-tarjeta-producto .botonchip-compra {
   display: flex;
   justify-content: flex-end;
   margin-top: 10px;
 }
-.contenedor-tarjetas-tarjeta-producto .botonchip-compra-icono {
+.contenedor-tarjetamaestra-tarjeta-producto .botonchip-compra-icono {
   margin-top: -10px;
   padding: 0 15px;
   height: 30px;
@@ -273,51 +273,121 @@
   font-weight: 600;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 6px 0 rgba(0, 0, 0, 0.12);
 }
-.contenedor-tarjetas-tarjeta-producto .botonchip-compra-icono:hover {
+.contenedor-tarjetamaestra-tarjeta-producto .botonchip-compra-icono:hover {
   background: #617077;
 }
-.contenedor-tarjetas-tarjeta-receta {
+.contenedor-tarjetamaestra-tarjeta-receta {
   margin-top: 5px;
   margin-bottom: 50px;
   display: block;
 }
 @media (min-width: 550px) {
-  .contenedor-tarjetas-tarjeta-receta {
+  .contenedor-tarjetamaestra-tarjeta-receta {
     padding-left: 10px;
     padding-right: 10px;
+    display: flex;
+    align-items: center;
   }
 }
+.contenedor-tarjetamaestra .tarjeta-producto {
+  padding: 12px;
+  max-height: -moz-fit-content;
+  max-height: fit-content;
+  transition: 0.4s;
+  max-width: 69%;
+  display: block;
+  border-bottom: #3F525A 0.75px solid;
+  padding: 30px;
+}
+.contenedor-tarjetamaestra .tarjeta-producto-imagen img {
+  height: auto;
+  max-width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 10px;
+}
+.contenedor-tarjetamaestra .tarjeta-producto-titulo {
+  padding-top: 10px;
+  text-align: left;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 20px;
+  padding-bottom: 16px;
+}
+.contenedor-tarjetamaestra .tarjeta-producto-texto {
+  font-size: 12px;
+  font-weight: 500;
+  margin-bottom: 15px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 @media (min-width: 550px) {
-  .contenedor-tarjetas-tarjeta-receta .tarjeta-producto-texto {
+  .contenedor-tarjetamaestra .tarjeta-producto-texto {
     font-size: 14px;
     font-weight: 500;
     margin-top: -13px;
   }
 }
-.contenedor-tarjetas-tarjeta-receta .tarjeta-producto-texto-gramos {
+.contenedor-tarjetamaestra .tarjeta-producto-texto-origen {
+  font-size: 13px;
+  font-weight: 600;
+}
+.contenedor-tarjetamaestra .tarjeta-producto-texto-origen-texto-origen {
+  font-size: 13px;
+  font-weight: 600;
+}
+.contenedor-tarjetamaestra .tarjeta-producto-texto-gramos {
   font-weight: 700;
   font-size: 16px;
   color: #F06B5F;
 }
-.contenedor-tarjetas-tarjeta-receta .tarjeta-producto-texto-origen-texto-origen {
-  font-weight: 600;
-  font-size: 15px;
-}
-.contenedor-tarjetas-tarjeta-receta .tarjeta-receta {
-  width: 100%;
+.contenedor-tarjetamaestra .tarjeta-producto .botonchip-compra {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 10px;
 }
 @media (min-width: 550px) {
-  .contenedor-tarjetas-tarjeta-receta .tarjeta-receta {
-    padding-left: 10px;
-    padding-right: 10px;
+  .contenedor-tarjetamaestra .tarjeta-producto .botonchip-compra {
+    padding-top: 10px;
   }
 }
-.contenedor-tarjetas-tarjeta-receta .tarjeta-receta-icono-play {
+.contenedor-tarjetamaestra .tarjeta-producto .botonchip-compra-icono {
+  margin-top: -10px;
+  padding: 0 15px;
+  height: 30px;
+  color: #EAEBEB;
+  font-size: 12px;
+  border-color: transparent;
+  border-radius: 25px;
+  background-color: #3F525A;
+  font-weight: 600;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 6px 0 rgba(0, 0, 0, 0.12);
+}
+.contenedor-tarjetamaestra .tarjeta-producto .botonchip-compra-icono:hover {
+  background: #617077;
+}
+
+.contenedor-tarjeta-receta {
+  width: 100%;
+  display: block;
+  flex-direction: column;
+}
+@media (min-width: 550px) {
+  .contenedor-tarjeta-receta {  
+    padding-left: 10px;
+    padding-right: 10px;
+    display: flex;
+  }
+}
+.contenedor-tarjeta-receta-icono-play {
   position: absolute;
-  margin-top: 100px;
+  margin-top: -1200px;
   margin-left: 140px;
 }
-.contenedor-tarjetas-tarjeta-receta .tarjeta-receta-imagen img {
+.contenedor-tarjeta-receta-imagen img {
   height: auto;
   width: 100%;
   -o-object-fit: cover;
@@ -328,98 +398,26 @@
   margin-bottom: 10;
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2), 0 4px 8px 0 rgba(0, 0, 0, 0.19);
 }
-.contenedor-tarjetas-tarjeta-receta .tarjeta-receta-titulo {
+.contenedor-tarjeta-receta-titulo {
   padding-top: 10px;
   font-weight: 600;
   font-size: 18px;
 }
-.contenedor-tarjetas-tarjeta-receta .tarjeta-receta-dificultad {
+.contenedor-tarjeta-receta-dificultad {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
 }
-.contenedor-tarjetas-tarjeta-receta .tarjeta-receta-dificultad-texto {
+.contenedor-tarjeta-receta-dificultad-texto {
   font-size: 13px;
   font-weight: 600;
   align-items: start;
   padding-top: 4px;
 }
-.contenedor-tarjetas-tarjeta-receta .tarjeta-receta-dificultad-imagen img {
+.contenedor-tarjeta-receta-dificultad-imagen img {
   width: 120px;
   height: auto;
   padding-left: 8px;
-}
-.contenedor-tarjetas-producto {
-  display: flex;
-  flex-wrap: wrap;
-}
-.contenedor-tarjetas-producto .tarjeta-producto {
-  padding: 12px;
-  max-height: -moz-fit-content;
-  max-height: fit-content;
-  transition: 0.4s;
-  max-width: 69%;
-  display: block;
-  border-bottom: #3F525A 0.75px solid;
-  padding: 30px;
-}
-.contenedor-tarjetas-producto .tarjeta-producto-imagen img {
-  height: auto;
-  max-width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  border-radius: 10px;
-}
-.contenedor-tarjetas-producto .tarjeta-producto-titulo {
-  padding-top: 10px;
-  text-align: left;
-  font-size: 20px;
-  font-weight: 600;
-  line-height: 20px;
-  padding-bottom: 16px;
-}
-.contenedor-tarjetas-producto .tarjeta-producto-texto {
-  font-size: 12px;
-  font-weight: 500;
-  margin-bottom: 15px;
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.contenedor-tarjetas-producto .tarjeta-producto-texto-origen {
-  font-size: 13px;
-  font-weight: 600;
-}
-.contenedor-tarjetas-producto .tarjeta-producto-texto-origen .texto-origen {
-  font-size: 13px;
-  font-weight: 600;
-}
-.contenedor-tarjetas-producto .tarjeta-producto-texto-gramos {
-  font-weight: 700;
-  font-size: 16px;
-  color: #F06B5F;
-}
-.contenedor-tarjetas-producto .tarjeta-producto .botonchip-compra {
-  display: flex;
-  justify-content: flex-end;
-  margin-top: 10px;
-}
-.contenedor-tarjetas-producto .tarjeta-producto .botonchip-compra-icono {
-  margin-top: -10px;
-  padding: 0 15px;
-  height: 30px;
-  color: #EAEBEB;
-  font-size: 12px;
-  border-color: transparent;
-  border-radius: 25px;
-  background-color: #3F525A;
-  font-weight: 600;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 6px 0 rgba(0, 0, 0, 0.12);
-}
-.contenedor-tarjetas-producto .tarjeta-producto .botonchip-compra-icono:hover {
-  background: #617077;
 }
 
 .linea-horizontal-secciones {
