--- a/scss/partials/_tarjetas.scss
+++ b/scss/partials/_tarjetas.scss
@@ -1,35 +1,19 @@
-.contenedor {
-    &-titulo {
-        &-secciones {
-            font-weight: 300;
-            padding-top: 30px;
-            margin-left: 15px;
+.contenedor-tarjetamaestra {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 
-            @media (min-width: 550px) {
-                font-weight: 400;
-                padding-top: 40px;
-            }
-        }
-    }
+    .contenedor {
+        &-titulo {
+            &-secciones {
+                font-weight: 300;
+                padding-top: 30px;
+                margin-left: 15px;
 
-    &-tarjetas {
-        width: 100%;
-        margin-left: auto;
-        margin-right: auto;
-
-        &-receta {
-            @media (min-width: 550px) {
-                display: flex;
-                justify-content: space-between;
-            }
-
-        }
-
-        &-producto {
-            @media (min-width: 550px) {
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: space-between;
+                @media (min-width: 550px) {
+                    font-weight: 400;
+                    padding-top: 40px;
+                }
             }
         }
 
@@ -39,230 +23,245 @@
             margin-right: auto;
 
             &-producto {
-                @media (min-width: 550px) {
-                    padding: 16px;
-                    height: auto;
-                    max-width: 100%;
-                    border-bottom: none;
-                }
-
-                &-imagen {
-                    img {
-                        @media (min-width: 550px) {
-                            width: 100%;
-                            height: 200px;
-                        }
-                    }
-                }
-
-                .botonchip {
-                    &-compra {
-                        display: flex;
-                        justify-content: flex-end;
-                        margin-top: 10px;
-
-                        &-icono {
-                            margin-top: -10px;
-                            padding: 0 15px;
-                            height: 30px;
-                            color: #EAEBEB;
-                            font-size: 12px;
-                            border-color: transparent;
-                            border-radius: 25px;
-                            background-color: #3F525A;
-                            font-weight: 600;
-                            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 6px 0 rgba(0, 0, 0, 0.12);
-
-                            &:hover{
-                                background: #617077;
-                            }
-                        }
-                    }
-                }
-            }
-
-            &-receta {
-                margin-top: 5px;
-                margin-bottom: 50px;
                 display: block;
 
                 @media (min-width: 550px) {
-                    padding-left: 10px;
-                    padding-right: 10px;
-                }
-
-
-                .tarjeta {
-
-                    &-producto {
-                        &-texto {
-                            @media (min-width: 550px) {
-                                font-size: 14px;
-                                font-weight: 500;
-                                margin-top: -13px;
-                            }
-
-                            &-gramos {
-                                font-weight: 700;
-                                font-size: 16px;
-                                color: #F06B5F;
-                            }
-
-                            &-origen {
-                                &-texto {
-                                    &-origen {
-                                        font-weight: 600;
-                                        font-size: 15px;
-                                    }
-                                }
-                            }
-                        }
-                    }
-
-                    &-receta {
-                        width: 100%;
-
-                        @media (min-width: 550px) {
-                            padding-left: 10px;
-                            padding-right: 10px;
-                        }
-
-                        &-icono-play {
-                            position: absolute;
-                            margin-top: 100px;
-                            margin-left: 140px;
-                        }
-
-                        &-imagen {
-                            img {
-                                height: auto;
-                                width: 100%;
-                                object-fit: cover;
-                                height: auto;
-                                border-radius: 10px;
-                                margin-top: 20px;
-                                margin-bottom: 10;
-                                box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2), 0 4px 8px 0 rgba(0, 0, 0, 0.19);
-                            }
-                        }
-
-                        &-titulo {
-                            padding-top: 10px;
-                            font-weight: 600;
-                            font-size: 18px;
-                        }
-
-                        &-dificultad {
-                            display: flex;
-                            align-items: center;
-                            flex-wrap: wrap;
-
-                            &-texto {
-                                font-size: 13px;
-                                font-weight: 600;
-                                align-items: start;
-                                padding-top: 4px;
-                            }
-
-                            &-imagen {
-                                img {
-                                    width: 120px;
-                                    height: auto;
-                                    padding-left: 8px;
-                                }
-                            }
-                        }
-
-                    }
+                    display: flex;
+                    flex-wrap: wrap;
+                    justify-content: space-between;
+                    padding: 16px;
+                    height: auto;
+                    max-width: 100%;
+                    border-bottom: none !important;
                 }
             }
         }
 
+    }
 
-        &-producto {
+}
+
+&-producto {
+
+
+
+
+    &-imagen {
+        img {
+            @media (min-width: 550px) {
+                width: 100%;
+                height: 200px;
+            }
+        }
+    }
+
+    .botonchip {
+        &-compra {
             display: flex;
-            flex-wrap: wrap;
+            justify-content: flex-end;
+            margin-top: 10px;
+
+            &-icono {
+                margin-top: -10px;
+                padding: 0 15px;
+                height: 30px;
+                color: #EAEBEB;
+                font-size: 12px;
+                border-color: transparent;
+                border-radius: 25px;
+                background-color: #3F525A;
+                font-weight: 600;
+                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 6px 0 rgba(0, 0, 0, 0.12);
+
+                &:hover {
+                    background: #617077;
+                }
+            }
+        }
+    }
+}
+
+&-receta {
+    margin-top: 5px;
+    margin-bottom: 50px;
+    display: block;
+
+    @media (min-width: 550px) {
+        padding-left: 10px;
+        padding-right: 10px;
+        display: flex;
+        align-items: center;
+
+    }
+
+
+}
+
+
+
+.tarjeta {
+    &-producto {
+        padding: 12px;
+        max-height: fit-content;
+        transition: 0.4s;
+        max-width: 69%;
+        display: block;
+        border-bottom: #3F525A 0.75px solid;
+        padding: 30px;
+
+        &-imagen {
+            img {
+                height: auto;
+                max-width: 100%;
+                object-fit: cover;
+                border-radius: 10px;
+            }
+        }
+
+        &-titulo {
+            padding-top: 10px;
+            text-align: left;
+            font-size: 20px;
+            font-weight: 600;
+            line-height: 20px;
+            padding-bottom: 16px;
+        }
+
+        &-texto {
+            font-size: 12px;
+            font-weight: 500;
+            margin-bottom: 15px;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis;
+
+            @media (min-width: 550px) {
+                font-size: 14px;
+                font-weight: 500;
+                margin-top: -13px;
+            }
+
+            &-origen {
+                font-size: 13px;
+                font-weight: 600;
+
+                &-texto {
+                    &-origen {
+                        font-size: 13px;
+                        font-weight: 600;
+                    }
+                }
+            }
+
+            &-gramos {
+                font-weight: 700;
+                font-size: 16px;
+                color: $colornaranja;
+            }
+        }
+
+        .botonchip-compra {
+            display: flex;
+            justify-content: flex-end;
+            margin-top: 10px;
+
+            @media (min-width: 550px) {
+                padding-top: 10px;
+            }
+
+            &-icono {
+                margin-top: -10px;
+                padding: 0 15px;
+                height: 30px;
+                color: #EAEBEB;
+                font-size: 12px;
+                border-color: transparent;
+                border-radius: 25px;
+                background-color: #3F525A;
+                font-weight: 600;
+                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 6px 0 rgba(0, 0, 0, 0.12);
+
+                &:hover {
+                    background: #617077;
+                }
+            }
+        }
+
+    }
+
+}
+
+
+
+.contenedor {
+    &-tarjeta {
+        &-receta {
+            width: 100%;
+            display: block;
+
+            @media (min-width: 550px) {
+                padding-left: 10px;
+                padding-right: 10px;
+                display: flex;
+            }
 
             .tarjeta {
-                &-producto {
-                    padding: 12px;
-                    max-height: fit-content;
-                    transition: 0.4s;
-                    max-width: 69%;
-                    display: block;
-                    border-bottom: #3F525A 0.75px solid;
-                    padding: 30px;
-
-                    &-imagen {
-                        img {
-                            height: auto;
-                            max-width: 100%;
-                            object-fit: cover;
-                            border-radius: 10px;
-                        }
-                    }
-
-                    &-titulo {
-                        padding-top: 10px;
-                        text-align: left;
-                        font-size: 20px;
-                        font-weight: 600;
-                        line-height: 20px;
-                        padding-bottom: 16px;
-                    }
-
-                    &-texto {
-                        font-size: 12px;
-                        font-weight: 500;
-                        margin-bottom: 15px;
-                        display: -webkit-box;
-                        -webkit-line-clamp: 2;
-                        -webkit-box-orient: vertical;
-                        overflow: hidden;
-                        text-overflow: ellipsis;
-
-                        &-origen {
-                            font-size: 13px;
-                            font-weight: 600;
-
-                            .texto-origen {
-                                font-size: 13px;
-                                font-weight: 600;
-                            }
-                        }
-
-                        &-gramos {
-                            font-weight: 700;
-                            font-size: 16px;
-                            color: $colornaranja;
-                        }
-                    }
-
-                    .botonchip-compra {
-                        display: flex;
-                        justify-content: flex-end;
-                        margin-top: 10px;
-
-                        &-icono {
-                            margin-top: -10px;
-                            padding: 0 15px;
-                            height: 30px;
-                            color: #EAEBEB;
-                            font-size: 12px;
-                            border-color: transparent;
-                            border-radius: 25px;
-                            background-color: #3F525A;
-                            font-weight: 600;
-                            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 6px 0 rgba(0, 0, 0, 0.12);
-
-                            &:hover {
-                                background: #617077;
-                            }
+                &-receta {
+                    &-icono {
+                        &-play {
+                            position: absolute;
+                            margin-top: 100px;
+                            margin-left: 140px;
                         }
                     }
 
                 }
+
+                &-imagen {
+                    img {
+                        height: auto;
+                        width: 100%;
+                        object-fit: cover;
+                        height: auto;
+                        border-radius: 10px;
+                        margin-top: 20px;
+                        margin-bottom: 10;
+                        box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2), 0 4px 8px 0 rgba(0, 0, 0, 0.19);
+                    }
+                }
             }
+
+
+
+            &-titulo {
+                padding-top: 10px;
+                font-weight: 600;
+                font-size: 18px;
+            }
+
+            &-dificultad {
+                display: flex;
+                align-items: center;
+                flex-wrap: wrap;
+
+                &-texto {
+                    font-size: 13px;
+                    font-weight: 600;
+                    align-items: start;
+                    padding-top: 4px;
+                }
+
+                &-imagen {
+                    img {
+                        width: 120px;
+                        height: auto;
+                        padding-left: 8px;
+                    }
+                }
+            }
+
         }
     }
 
@@ -279,3 +278,10 @@
     background-color: #3F525A;
     height: 1px;
 }
+
+// &-receta {
+//     @media (min-width: 550px) {
+//         display: flex;
+//         justify-content: space-between;
+//     }
+// }
